src/App.module.css
.container {
	display: flex;
	justify-content: center;
}

.content {
	max-width: 675px;
	width: 100%;
}

.center {
	display: flex;
	justify-content: center;
	margin-top: 5rem;
	margin-bottom: 2.5rem;
}

.aboutContainer {
	display: flex;
	padding-top: 5rem;
	flex-direction: row;
	align-items: center;
	justify-content: left;
	max-height: 200px;
	height: 200px;
	margin-top: -5rem;
	margin-left: -0.5rem;
}

.aboutImg {
	height: 175px;
}

.aboutText1 {
	font-weight: 625;
	margin-bottom: 0.5rem;
}

.musicContainer {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	max-height: 200px;
	height: 200px;
}

.musicText {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin-right: 3rem;
	height: 100%;
	padding-top: 2rem;
	padding-bottom: 2rem;
}

.musicTextName {
	font-weight: 625;
	margin-top: 1rem;
}

.musicTextArtist {
	font-weight: 625;
	margin-bottom: 1rem;
}

.musicImage {
	border-radius: 20px;
	margin-left: 3rem;
	box-shadow: 0 10px 20px -5px rgba(115, 115, 115, 0.75),
		-10px 0 20px -5px rgba(115, 115, 115, 0.75);
	height: 175px;
}

